--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ jwt.token.expiration.in.seconds=604800
 #
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+#
+#
+#
+management.endpoints.web.exposure.include=*
